--- a/bookstore/templates/index.html
+++ b/bookstore/templates/index.html
@@ -1,10 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Library</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Library{% endblock %}
+
+{% block content %}
     <h1>Welcome to our library!</h1>
     <ul>
         <li><strong>Books: </strong><a href="{% url 'books' %}">{{ num_books }}</a></li>
@@ -12,5 +10,4 @@
         <li><strong>Publishers: </strong><a href="{% url 'publishers' %}">{{ num_publishers }}</a></li>
         <li><strong>Stores: </strong><a href="{% url 'stores' %}">{{ num_stores }}</a></li>
     </ul>
-</body>
-</html>
+{% endblock %}
