--- a/bookstore/templates/authors_detail.html
+++ b/bookstore/templates/authors_detail.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Selected author</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Selected author{% endblock %}
+
 {% block content %}
 <div>
     <p><a href="{% url 'authors' %}">Back to the list of authors</a></p>
@@ -35,5 +32,3 @@
     <button type="button" onclick="history.back();">Back</button>
 </div>
 {% endblock %}
-</body>
-</html>
