--- a/bookstore/templates/books_detail.html
+++ b/bookstore/templates/books_detail.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>Selected book</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}Selected book<{% endblock %}
+
 {% block content %}
     <p><a href="{% url 'books' %}">Back to the list of books</a></p>
     <h1>Book: {{ book.name }}</h1>
@@ -40,6 +37,7 @@
         </tr>
     </table>
     <button type="button" onclick="history.back();">Back</button>
+    <button type="button"><a href="../../book/update/{{ book.id }}">Update</a></button>
+    <button type="button"><a href="{% url 'book-create' %}">Create new book</a></button>
+    <button type="button"><a href="../../book/delete/{{ book.id }}">Delete</a></button>
 {% endblock %}
-</body>
-</html>
