--- a/bookstore/templates/publishers.html
+++ b/bookstore/templates/publishers.html
@@ -1,10 +1,7 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <title>List of publishers</title>
-</head>
-<body>
+{% extends 'base.html' %}
+
+{% block title %}List of publishers{% endblock %}
+
 {% block content %}
     <p><a href="{% url 'index' %}">Return to home page</a></p>
     {% if publishers %}
@@ -30,5 +27,3 @@
     {% endif %}
     <button type="button" onclick="history.back();">Back</button>
 {% endblock %}
-</body>
-</html>
