--- a/bookstore/templates/base.html
+++ b/bookstore/templates/base.html
@@ -3,10 +3,84 @@
 {% load custom_tags_filters %}
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
+          integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
+          integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
+          crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.bundle.min.js"
+          integrity="sha384-LtrjvnR4Twt/qOuYxE721u19sVFLVSA4hf/rRt6PrZTmiPltdZcI7q7PXQBYTKyf"
+          crossorigin="anonymous"></script>
+
+    {% load static %}
+    {% block extra_js %}
+        <script src="{% static 'js/contact_us.js' %}"></script>
+    {% endblock %}
+
 </head>
 <body>
+   {% if messages %}
+        <div class="row">
+            <div class="col-sm-12">
+                {% for message in messages %}
+                    <div class="alert alert-{{ message.tags }} alert-dismissible text-center" role="alert">
+                        <button type="button" class="close" data-dismiss="alert" aria-label="Close"><span
+                                aria-hidden="true">&times;</span></button>
+                        <strong>{% if message.level == DEFAULT_MESSAGE_LEVELS.ERROR %}Error{% else %}
+                            {{ message.tags|title }}{% endif %}!</strong> {{ message }}
+                    </div>
+                {% endfor %}
+            </div>
+        </div>
+   {% endif %}
+
+
+   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+       <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+       </button>
+    <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+        <a class="navbar-brand" href="{% url 'index' %}">Library</a>
+        <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+        <li class="nav-item active">
+            <a class="nav-link" href="{% url 'index' %}">Home <span class="sr-only">(current)</span></a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'books' %}">All books</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'authors' %}">All authors</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'publishers' %}">All publishers</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{% url 'stores' %}">All stores</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link js-contact" data-url="{% url 'contact' %}">Contact Us</a>
+        </li>
+        </ul>
+    </div>
+    </nav>
+
   {% current_time "%d/%m/%Y %H:%M:%S %p" %}
   {% block content %}{% endblock %}
+
+
+  <!--  Contact Form  -->
+  {% block modal %}
+    <div class="modal fade" id="contact">
+        <div class="modal-dialog">
+            <div class="modal-content">
+            </div>
+        </div>
+    </div>
+  {% endblock %}
+
+
 </body>
 </html>
